header z-index fix

--- a/styles/Header.module.sass
+++ b/styles/Header.module.sass
@@ -55,6 +55,7 @@
 
     @media screen and (max-width: 768px)
       position: fixed
+      z-index: 2
       top: 0
       left: 0
       height: 100%
